--- a/style.css
+++ b/style.css
@@ -8,9 +8,9 @@ font-family: 'Roboto Condensed', sans-serif; */
 .container {
   width: 100%;
   height: 100vh;
-  /* background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
-    url(images/bg1.jpeg) center no-repeat; */
-  background-color: #cc683c;
+  background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
+    url(images/bg1.jpeg) center no-repeat;
+  /* background-color: #cc683c; */
   background-size: cover;
 }
 
@@ -25,7 +25,7 @@ font-family: 'Roboto Condensed', sans-serif; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  display: none;
+  /* display: none; */
 }
 
 .banner-heading {
@@ -96,6 +96,9 @@ font-family: 'Roboto Condensed', sans-serif; */
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
+  opacity: 0;
+  visibility: hidden;
+  transition: opacity 1s;
 }
 
 .sign-up-form {
