--- a/style.css
+++ b/style.css
@@ -1,5 +1,3 @@
-/* font-family: 'Oswald', sans-serif;
-font-family: 'Roboto Condensed', sans-serif; */
 * {
   margin: 0;
   padding: 0;
@@ -25,7 +23,7 @@ font-family: 'Roboto Condensed', sans-serif; */
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  /* display: none; */
+  display: none;
 }
 
 .banner-heading {
@@ -96,8 +94,8 @@ font-family: 'Roboto Condensed', sans-serif; */
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
-  opacity: 0;
-  visibility: hidden;
+  /* opacity: 0;
+  visibility: hidden; */
   transition: opacity 1s;
 }
 
@@ -227,4 +225,98 @@ font-family: 'Roboto Condensed', sans-serif; */
   font-size: 23px;
   color: #262626;
   cursor: pointer;
+}
+
+@media (max-width: 850px) {
+  .form-container {
+    width: 600px;
+    height: 400px;
+  }
+
+  .sign-up-form {
+    padding: 50px 30px;
+  }
+
+  .form-input {
+    width: 200px;
+    font-size: 14px;
+    margin-bottom: 30px;
+    padding: 7px 0;
+  }
+
+  .sign-up-form p {
+    font-size: 15px;
+  }
+
+  .sign-up-form label {
+    font-size: 13px;
+  }
+
+  .sign-up-form input[type="checkbox"] {
+    width: 25px;
+    height: 12px;
+  }
+
+  .sign-up-form input[type="checkbox"]::before {
+    width: 14px;
+    height: 14px;
+  }
+
+  .sign-up-form button {
+    margin-top: 50px;
+    width: 120px;
+    padding: 6px 4px;
+    font-size: 13px;
+    border-width: 1px;
+  }
+
+  .header h1 {
+    font-size: 30px;
+  }
+}
+
+@media (max-width: 800px) {
+  .banner {
+    width: 450px;
+  }
+
+  .banner-heading {
+    font-size: 60px;
+    margin-bottom: 40px;
+    border-width: 4px;
+  }
+
+  .arrow {
+    font-size: 30px;
+  }
+
+  .banner-btn {
+    width: 150px;
+    padding: 10px;
+    font-size: 15px;
+  }
+}
+
+@media (max-width: 650px) {
+  .header {
+    display: none;
+  }
+
+  .form-container {
+    width: 300px;
+  }
+
+  .sign-up-form {
+    width: 100%;
+  }
+}
+
+@media (max-width: 500px) {
+  .banner {
+    width: 300px;
+  }
+
+  .banner-heading {
+    font-size: 40px;
+  }
 }
