--- a/style.css
+++ b/style.css
@@ -8,7 +8,6 @@
   height: 100vh;
   background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.7)),
     url(images/bg1.jpeg) center no-repeat;
-  /* background-color: #cc683c; */
   background-size: cover;
 }
 
@@ -23,7 +22,6 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  display: none;
 }
 
 .banner-heading {
@@ -94,8 +92,8 @@
   left: 50%;
   transform: translate(-50%, -50%);
   box-shadow: 0 20px 50px rgba(0, 0, 0, 0.4);
-  /* opacity: 0;
-  visibility: hidden; */
+  opacity: 0;
+  visibility: hidden;
   transition: opacity 1s;
 }
 
